# egui_winit_vulkano

./: Cargo.toml
examples/: multisample.rs  paint_callback.rs  subpass.rs
examples/wholesome/: frame_system.rs  main.rs  triangle_draw_system.rs
src/: egui_system.rs  image_utils.rs  integration.rs  lib.rs  renderer.rs  utils.rs
src/render_egui/: _push_constants.glsl  egui_fs.glsl  egui_vs.glsl
