[package]
name = "egui_winit_vulkano"
version = "0.27.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2021"
description = "Egui immediate mode gui integration with winit and Vulkano"
homepage = "https://github.com/hakolao/egui_winit_vulkano"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hakolao/egui_winit_vulkano"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[features]
default = ["clipboard", "links"]
links = ["egui-winit/links"]
clipboard = ["egui-winit/clipboard"]

[dependencies]
ahash = "0.8"
egui-winit = "0.27"
egui = "0.27"
image = "0.25"
winit = "0.29"
vulkano = { git = "https://github.com/LukeP0WERS/vulkano", branch = "fake_bug_fix" }
vulkano-shaders = { git = "https://github.com/LukeP0WERS/vulkano", branch = "fake_bug_fix" , features = ["shaderc-debug"] }

[dev-dependencies]
cgmath = "0.18.0"
egui_demo_lib = "0.27"
vulkano-util = { git = "https://github.com/LukeP0WERS/vulkano", branch = "fake_bug_fix" }
